Changed to maven. Use static where possible